--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -17,6 +17,7 @@
     }
 
     .row-info {
+        position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -26,7 +27,6 @@
         background: #f8f9fa;
         border-top: none;
         border-left: none;
-
     }
 
     .row-data {
@@ -34,6 +34,7 @@
     }
 
     .column {
+        position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -44,9 +45,6 @@
         border: 1px solid $border-color;
         border-top: none;
         border-left: none;
-        
-
-
     }
 
     .cell {
@@ -63,8 +61,39 @@
 
         &.selected {
             border: none;
-            outline: 2px solid #3c74ff;
+            outline: 2px solid $primary-color;
             z-index: 2;
+        }
+    }
+
+    .col-resize, .row-resize{
+        position: absolute;
+        opacity: 0;
+        background: $primary-color;
+        bottom: 0;
+        right: 0;
+        z-index: 1000;
+
+        &:hover {
+            opacity: 1 !important;
+        }
+    }
+
+    .col-resize {
+        top: 0;
+        width: 4px;
+        
+        &:hover {
+            cursor: col-resize;
+        }
+    }
+
+    .row-resize {
+        left: 0;
+        height: 4px;
+
+        &:hover {
+            cursor: row-resize;
         }
     }
 }
